--- a/Pregnancy.ipynb
+++ b/Pregnancy.ipynb
@@ -27,6 +27,7 @@
       "h = 5.708829531958749e-09\n",
       "V max =  153.92261062712143\n",
       "W     = 1.058539186416062e+66\n",
+      "kstar = 1.0190913240718343e-83 m/s\n",
       "tau    = 4.4101857373433076e+67 s\n",
       "-0.45823334346911376\n",
       "CCC = 0.014020834733017401 mol/L\n",
@@ -41,6 +42,7 @@
       "h = 3.5117952269119617e-09\n",
       "V max =  100.12408758736206\n",
       "W     = 1.4464560730353327e+42\n",
+      "kstar = 7.457869763047524e-60 m/s\n",
       "tau    = 6.026361635786144e+43 s\n",
       "-0.45823334346911376\n",
       "CCC = 0.014020834733017401 mol/L\n",
@@ -55,6 +57,7 @@
       "h = 2.480035802630068e-09\n",
       "V max =  17.617761330715776\n",
       "W     = 673384.3733353727\n",
+      "kstar = 1.6019797069591437e-23 m/s\n",
       "tau    = 28055174.50032551 s\n",
       "-0.45823334346911376\n",
       "CCC = 0.014020834733017401 mol/L\n",
@@ -69,6 +72,7 @@
       "h = 1.1965694492277898e-08\n",
       "V max =  26.034308062269908\n",
       "W     = 30445480741.33337\n",
+      "kstar = 3.543212571454448e-28 m/s\n",
       "tau    = 1268448316841.182 s\n",
       "-0.24260143836081188\n",
       "CCC = 0.0011015408458316508 mol/L\n",
@@ -83,6 +87,7 @@
       "h = 8.726618518053278e-09\n",
       "V max =  2.1081891109880537\n",
       "W     = 0.39132843146446444\n",
+      "kstar = 1.0787481010666668e-17 m/s\n",
       "tau    = 41.66294260938084 s\n",
       "-0.24260143836081188\n",
       "CCC = 0.0011015408458316508 mol/L\n",
@@ -97,6 +102,7 @@
       "h = 9.616431128256896e+39\n",
       "V max =  -2.1421679454330065e-47\n",
       "W     = 0.015030260386802496\n",
+      "kstar = 1.0787481010666668e-17 m/s\n",
       "tau    = 41.66294260938084 s\n",
       "-0.24260143836081188\n",
       "CCC = 0.0011015408458316508 mol/L\n"
@@ -171,7 +177,7 @@
     "            kstar = k/W \n",
     "        else:\n",
     "            kstar = k\n",
-    "\n",
+    "        print(\"kstar =\", kstar, \"m/s\")\n",
     "        # aggregation time \n",
     "        print(\"tau    =\", 2/(kstar*n), 's' )\n",
     "        \n",
